--- a/COM2027_cw/job_matching_app/templates/job_matching_app/job_opportunities.html
+++ b/COM2027_cw/job_matching_app/templates/job_matching_app/job_opportunities.html
@@ -21,6 +21,7 @@
                         <div class="card-body">
                             <h3 class="card-title">{{ job.title }}</h3>
                             <p class="card-text">{{ job.description }}</p>
+                            <p class="card-text"><strong>Skills Required:</strong> {{ job.skills_required }}</p>
                             <!-- Add other job details -->
                         </div>
                     </div>
